Fixed that ugly layout with the cramped table.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,18 @@
-
 .card .card-header {
     background-color: #235f7f;
     color: #EFFBFF;
 }
 
-.table, th {
-padding: 0.75rem;
+table {
+    table-layout:fixed;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 0.75rem;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #c3d0d6;
 }
